// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test select example 1`] = `
"<div class="app-type">基本使用</div>
<div class="pb">
  <div class="var-select">
    <div class="var-menu var-select__menu" var-select-cover="">
      <div class="var-field-decorator var-field-decorator--standard">
        <div class="var-field-decorator__controller var--box">
          <div class="var-field-decorator__icon"></div>
          <div class="var-field-decorator__wrap">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
          </div>
          <div class="var-field-decorator__icon">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__dot"></div>
        </div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-select">
    <div class="var-menu var-select__menu" var-select-cover="">
      <div class="var-field-decorator var-field-decorator--outlined">
        <div class="var-field-decorator__controller var--box">
          <div class="var-field-decorator__icon"></div>
          <div class="var-field-decorator__wrap">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
          </div>
          <div class="var-field-decorator__icon">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__line-start var--box"></div>
          <div class="var-field-decorator__line-notch var--box">
            <div class="var-field-decorator__line-placeholder var--ellipsis">请选择一个选项</div>
          </div>
          <div class="var-field-decorator__line-end var--box"></div>
        </div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type">小尺寸</div>
<div class="pb">
  <div class="var-select">
    <div class="var-menu var-select__menu" var-select-cover="">
      <div class="var-field-decorator var-field-decorator--standard var-field-decorator--small">
        <div class="var-field-decorator__controller var--box">
          <div class="var-field-decorator__icon"></div>
          <div class="var-field-decorator__wrap">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
          </div>
          <div class="var-field-decorator__icon">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__dot"></div>
        </div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-select">
    <div class="var-menu var-select__menu" var-select-cover="">
      <div class="var-field-decorator var-field-decorator--outlined var-field-decorator--small">
        <div class="var-field-decorator__controller var--box">
          <div class="var-field-decorator__icon"></div>
          <div class="var-field-decorator__wrap">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
          </div>
          <div class="var-field-decorator__icon">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__line-start var--box"></div>
          <div class="var-field-decorator__line-notch var--box">
            <div class="var-field-decorator__line-placeholder var--ellipsis">请选择一个选项</div>
          </div>
          <div class="var-field-decorator__line-end var--box"></div>
        </div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type">朴素模式</div>
<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon var-field-decorator--non-hint"></div>
        <div class="var-field-decorator__wrap var-field-decorator--wrap-non-hint">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--placeholder-non-hint" for="">请选择一个选项</label>
        </div>
        <div class="var-field-decorator__icon var-field-decorator--non-hint">
          <!--v-if-->
        </div>
      </div>
      <!--v-if-->
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">文本关联值</div>
<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="relation">当前选择的是: </div>
<div class="app-type">禁用</div>
<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard var-field-decorator--disabled">
      <div class="var-field-decorator__controller var--box var-field-decorator--disabled">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select var-select--disabled" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--disabled" for="">请选择一个选项</label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line var-field-decorator--line-disabled">
        <div class="var-field-decorator__dot var-field-decorator--line-disabled"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">只读</div>
<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">可清除</div>
<div class="pb">
  <div class="var-select">
    <div class="var-menu var-select__menu" var-select-cover="">
      <div class="var-field-decorator var-field-decorator--standard">
        <div class="var-field-decorator__controller var--box">
          <div class="var-field-decorator__icon"></div>
          <div class="var-field-decorator__wrap">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
          </div>
          <div class="var-field-decorator__icon">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__dot"></div>
        </div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-select">
    <div class="var-menu var-select__menu" var-select-cover="">
      <div class="var-field-decorator var-field-decorator--outlined">
        <div class="var-field-decorator__controller var--box">
          <div class="var-field-decorator__icon"></div>
          <div class="var-field-decorator__wrap">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
          </div>
          <div class="var-field-decorator__icon">
            <!--v-if-->
          </div>
        </div>
        <div class="var-field-decorator__line">
          <div class="var-field-decorator__line-start var--box"></div>
          <div class="var-field-decorator__line-notch var--box">
            <div class="var-field-decorator__line-placeholder var--ellipsis">请选择一个选项</div>
          </div>
          <div class="var-field-decorator__line-end var--box"></div>
        </div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type">自定义图标</div>
<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-plus prepend-icon" style="transition-duration: 0ms;"></i></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-chevron-down" style="transition-duration: 300ms;"></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
        </div>
        <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-minus append-icon" style="transition-duration: 0ms;"></i></div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">多选</div>
<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择多个选项</label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">纸片风格的多选</div>
<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择多个选项</label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">单选值校验</div>
<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择一个选项</label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">多选值校验</div>
<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="">请选择多个选项</label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="space"></div>"
`;

exports[`test select focus & blur methods 1`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box var-field-decorator--focus">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow var-select--arrow-rotate" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--focus var-field-decorator--placeholder-hint" for="" style="transform: translate(-0, 0);"></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot var-field-decorator--line-focus"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select focus & blur methods 2`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for="" style=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select hint to be false 1`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon var-field-decorator--non-hint"></div>
        <div class="var-field-decorator__wrap var-field-decorator--wrap-non-hint">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label"><span></span></div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--placeholder-hidden var-field-decorator--placeholder-non-hint" for=""></label>
        </div>
        <div class="var-field-decorator__icon var-field-decorator--non-hint">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select size 1`] = `
"<div class="var-select" value="">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard var-field-decorator--small">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select validation 1`] = `
"<div class="var-select">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box var-field-decorator--error">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select var-select--error" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--error" for=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line var-field-decorator--line-error">
        <div class="var-field-decorator__dot var-field-decorator--line-error"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>您必须选择一个</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test select variant 1`] = `
"<div class="var-select" value="">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--standard">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select variant 2`] = `
"<div class="var-select" value="">
  <div class="var-menu var-select__menu" var-select-cover="">
    <div class="var-field-decorator var-field-decorator--outlined">
      <div class="var-field-decorator__controller var--box">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__wrap">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div><label class="var-field-decorator__placeholder var--ellipsis" for=""></label>
        </div>
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__line-start var--box"></div>
        <div class="var-field-decorator__line-notch var--box">
          <div class="var-field-decorator__line-placeholder var--ellipsis"></div>
        </div>
        <div class="var-field-decorator__line-end var--box"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
